Fixed issue with overflowing canvas ony-axis

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden;
     margin-left: 16px;
     background-color: #f4f4f4;
     color: #282828;
